<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/lce_view_net_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="@dimen/dp_10"
            android:contentDescription="@string/network_error"
            app:srcCompat="@drawable/ic_vector_net_error" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="5dp"
            android:text="@string/empty_network_error"
            android:textColor="@color/txt_color" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lce_view_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="@dimen/dp_10"
            android:contentDescription="@string/loading"
            app:srcCompat="@drawable/ic_vector_loading" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="35dp"
                android:layout_height="35dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="5dp"
                android:text="@string/loading"
                android:textColor="@color/txt_color" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lce_view_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="@dimen/dp_10"
            android:contentDescription="@string/empty_no_data"
            app:srcCompat="@drawable/ic_vector_empty" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="5dp"
            android:text="@string/empty_no_data"
            android:textColor="@color/txt_color" />
    </LinearLayout>
</FrameLayout>