<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/rl_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="5dp"
    card_view:contentPadding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_item_Desc"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:maxLines="5"
                android:text="@string/app_name"
                android:textAllCaps="false"
                android:textSize="16sp" />

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/iv_item_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/item_image"
                android:scaleType="centerCrop" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_item_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/tv_item_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:drawablePadding="@dimen/dp_10"
                android:drawableStart="@drawable/ic_vector_bottom_wanandroid"
                android:gravity="center_vertical"
                android:text="@string/android"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/tv_item_author"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:drawablePadding="@dimen/dp_10"
                android:drawableStart="@drawable/ic_vector_bottom_personal"
                android:gravity="center_vertical"
                android:text="kingsley"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/tv_item_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:drawablePadding="@dimen/dp_10"
                android:drawableStart="@drawable/ic_vector_bottom_time"
                android:gravity="center_vertical"
                android:text="2017-10-11"
                android:textAllCaps="false" />
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>